# prz

./: com.pretzel.prz.json  doc.sh  main.pbc  meson.build  meson_options.txt
src/: app.vala  byteparser.vala  bytescanner.vala  code.vala  common.vapi  config.h.in  config.vapi  constant.vala  error.vala  formaterror.vala  function.vala  main.vala  meson.build  opcode.vala  pool.vala  primitivedata.h  stack.vala  type.vala  util.vala  vm.vala  vmerror.vala
